mengubah link yt & tiktok

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <a href="https://muhamadragil.github.io" class="animate__animated animate__zoomIn" target="_blank">MY PORTFOLIO</a>
             <a href="https://github.com/MuhamadRagil" class="animate__animated animate__zoomIn" target="_blank">GITHUB</a>
             <a href="https://instagram.com/Adiingzky" class="animate__animated animate__zoomIn" target="_blank">INSTAGRAM</a>
-            <a href="https://youtube.com/Adiingzky" class="animate__animated animate__zoomIn" target="_blank">YOUTUBE</a>
-            <a href="https://tiktok.com/adiingzky" class="animate__animated animate__zoomIn" target="_blank">TIKTOK</a>
+            <a href="https://www.youtube.com/channel/UC-c9ljUMIFv71ysnID-mC0g/featured" class="animate__animated animate__zoomIn" target="_blank">YOUTUBE</a>
+            <a href="https://tiktok.com/@ragilgnlzky" class="animate__animated animate__zoomIn" target="_blank">TIKTOK</a>
         </div>
 
         <!-- footer -->
